# fde_navi

./: .gitignore  CMakeLists.txt  Makefile  README.md  draggable_button.cpp  draggable_button.h  fde_navi  fde_navi.pro  fde_navi.qrc  fdenavi.pro  main.cpp  mkdeb.sh  mywidget.cpp  navi.cpp  navi.h  qrc_fde_navi.cpp  testnavi.pro
debian/: fdenavi_1.0.dsc  fdenavi_1.0_arm64.buildinfo  fdenavi_1.0_arm64.changes
debian/fdenavi-1.0/debian/: README  README.Debian  README.source  changelog  control  copyright  debhelper-build-stamp  fdenavi.cron.d.ex  fdenavi.doc-base.EX  fdenavi.substvars  files  install  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex
debian/fdenavi-1.0/debian/fdenavi/DEBIAN/: control  md5sums  shlibs  triggers
